--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,4 +64,23 @@ const basePath = "/page/";
     basePath={basePath}
     maxDisplayedPages={5}
   />
+
+  <script
+    is:inline
+    type="application/ld+json"
+    set:html={JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      name: SITE_TITLE,
+      url: Astro.site,
+      potentialAction: {
+        "@type": "SearchAction",
+        target: {
+          "@type": "EntryPoint",
+          urlTemplate: `${new URL("/search/", Astro.site)}?q={search_term_string}`,
+        },
+        "query-input": "required name=search_term_string",
+      },
+    })}
+  />
 </BaseLayout>
