--- a/src/components/MyPicture.astro
+++ b/src/components/MyPicture.astro
@@ -16,6 +16,7 @@ const { loading, fetchpriority } = Astro.props;
 
 <Picture
   formats={["avif", "webp"]}
+  fallbackFormat="png"
   src={src}
   alt={alt}
   widths={[240, 540, 720, src.width]}
