--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -75,24 +75,8 @@ const pageTitle =
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3857753364740983"
   crossorigin="anonymous"></script>
 
-<!-- Google tag (gtag.js) -->
 <script
   is:inline
-  type="text/partytown"
-  src="https://www.googletagmanager.com/gtag/js?id=G-DB7G8H3V1H"></script>
-
-<script is:inline type="text/partytown">
-  partytown = {
-    forward: ["dataLayer.push"],
-  };
-</script>
-
-<script is:inline type="text/partytown">
-  window.dataLayer = window.dataLayer || [];
-  window.gtag = function gtag() {
-    dataLayer.push(arguments);
-  };
-  gtag("js", new Date());
-
-  gtag("config", "G-DB7G8H3V1H");
-</script>
+  defer
+  src="https://cloud.umami.is/script.js"
+  data-website-id="871a8d52-f12f-4d22-bce2-bdedd46679d9"></script>
