--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,61 +26,49 @@ const basePath = "/page/";
     </div>
 
     <div class="mb-4 grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-2">
-      {firstPagePosts.slice(1, 3).map((post) => <Card post={post} />)}
-    </div>
-
-    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
-      {
-        firstPagePosts.slice(3).map((post, i) => {
-          if (i % 3 === 0) {
-            return (
-              <>
-                <ins
-                  class="adsbygoogle"
-                  style="display:block"
-                  data-ad-format="fluid"
-                  data-ad-layout-key="-6t+ed+2i-1n-4w"
-                  data-ad-client="ca-pub-3857753364740983"
-                  data-ad-slot="2091036471"
-                />
-                <script is:inline>
-                  (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-                <Card post={post} />
-              </>
-            );
-          }
-          return <Card post={post} />;
-        })
-      }
+      <ins
+        class="adsbygoogle"
+        style="display:block"
+        data-ad-format="fluid"
+        data-ad-layout-key="-6f+ed+2i-1n-4w"
+        data-ad-client="ca-pub-3857753364740983"
+        data-ad-slot="1188694943"></ins>
+      <script is:inline>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+      <Card post={firstPagePosts[1]} />
     </div>
   </div>
 
-  <Pagination
-    currentPage={1}
-    lastPage={totalPages}
-    urlPrev={null}
-    urlNext={totalPages > 1 ? `/page/2` : null}
-    basePath={basePath}
-    maxDisplayedPages={5}
-  />
-
-  <script
-    is:inline
-    type="application/ld+json"
-    set:html={JSON.stringify({
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      name: SITE_TITLE,
-      url: Astro.site,
-      potentialAction: {
-        "@type": "SearchAction",
-        target: {
-          "@type": "EntryPoint",
-          urlTemplate: `${new URL("/search/", Astro.site)}?q={search_term_string}`,
-        },
-        "query-input": "required name=search_term_string",
-      },
-    })}
-  />
+  <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
+    {firstPagePosts.slice(2).map((post) => <Card post={post} />)}
+  </div>
 </BaseLayout>
+
+<Pagination
+  currentPage={1}
+  lastPage={totalPages}
+  urlPrev={null}
+  urlNext={totalPages > 1 ? `/page/2` : null}
+  basePath={basePath}
+  maxDisplayedPages={5}
+/>
+
+<script
+  is:inline
+  type="application/ld+json"
+  set:html={JSON.stringify({
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    name: SITE_TITLE,
+    url: Astro.site,
+    potentialAction: {
+      "@type": "SearchAction",
+      target: {
+        "@type": "EntryPoint",
+        urlTemplate: `${new URL("/search/", Astro.site)}?q={search_term_string}`,
+      },
+      "query-input": "required name=search_term_string",
+    },
+  })}
+/>
