--- a/src/pages/page/[page].astro
+++ b/src/pages/page/[page].astro
@@ -54,48 +54,46 @@ const { page } = Astro.props;
           {page.data.length > 0 && <HeroCard post={page.data[0]} />}
         </div>
         <div class="mb-4 grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-2">
-          {page.data.slice(1, 3).map((post) => (
-            <PostCard post={post} />
-          ))}
+          <ins
+            class="adsbygoogle"
+            style="display:block"
+            data-ad-format="fluid"
+            data-ad-layout-key="-6f+ed+2i-1n-4w"
+            data-ad-client="ca-pub-3857753364740983"
+            data-ad-slot="1188694943"
+          />
+          <script is:inline>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+          <PostCard post={page.data[1]} />
         </div>
         <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
-          {page.data.slice(3).map((post, i) => {
-            if (i % 3 === 0) {
-              return (
-                <>
-                  <ins
-                    class="adsbygoogle"
-                    style="display:block"
-                    data-ad-format="fluid"
-                    data-ad-layout-key="-6t+ed+2i-1n-4w"
-                    data-ad-client="ca-pub-3857753364740983"
-                    data-ad-slot="2091036471"
-                  />
-                  <script is:inline>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                  </script>
-                  <PostCard post={post} />
-                </>
-              );
-            }
-            return <PostCard post={post} />;
-          })}
+          {page.data.slice(2).map((post) => (
+            <PostCard post={post} />
+          ))}
         </div>
       </>
     ) : (
       <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3">
         {page.data.map((post, i) => {
-          if ((i + 2) % 3 === 0) {
-            <ins
-              class="adsbygoogle"
-              style="display:block"
-              data-ad-format="fluid"
-              data-ad-layout-key="-6t+ed+2i-1n-4w"
-              data-ad-client="ca-pub-3857753364740983"
-              data-ad-slot="2091036471"
-            />;
+          if (i === 1) {
+            return (
+              <>
+                <ins
+                  class="adsbygoogle"
+                  style="display:block"
+                  data-ad-format="fluid"
+                  data-ad-layout-key="-6f+ed+2i-1n-4w"
+                  data-ad-client="ca-pub-3857753364740983"
+                  data-ad-slot="1188694943"
+                />
+                <script is:inline>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+              </>
+            );
           }
-          <PostCard post={post} />;
+          return <PostCard post={post} />;
         })}
       </div>
     )
