--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 import { HeaderLinks, SITE_TITLE } from "@consts";
 import Link from "@components/Links.astro";
+const isArticle = /^\/posts\/[\w-]+\/$/.test(Astro.url.pathname);
 ---
 
 <header class="z-50 flex w-full flex-wrap py-7 md:flex-nowrap md:justify-start">
@@ -9,13 +10,30 @@ import Link from "@components/Links.astro";
     aria-label="Global"
   >
     <div class="md:col-span-3">
-      <a
-        class="flex-none text-xl font-semibold text-neutral-900 hover:text-neutral-600 dark:text-neutral-400 dark:hover:text-neutral-200"
-        href="/"
-        aria-label="Astroverse"
-      >
-        {SITE_TITLE}
-      </a>
+      {
+        (() => {
+          if (isArticle) {
+            return (
+              <a
+                class="flex-none text-xl font-semibold text-neutral-900 hover:text-neutral-600 dark:text-neutral-400 dark:hover:text-neutral-200"
+                href="/"
+              >
+                {SITE_TITLE}
+              </a>
+            );
+          }
+          return (
+            <h1>
+              <a
+                class="flex-none text-xl font-semibold text-neutral-900 hover:text-neutral-600 dark:text-neutral-400 dark:hover:text-neutral-200"
+                href="/"
+              >
+                {SITE_TITLE}
+              </a>
+            </h1>
+          );
+        })()
+      }
     </div>
 
     <div
